--- a/2/2.vcxproj.filters
+++ b/2/2.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="_2.2.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="_2.3.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
