--- a/2/2.vcxproj.filters
+++ b/2/2.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\practise">
+      <UniqueIdentifier>{4c3f324d-5a67-4b65-9adc-304a60c090a7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="nogood.c">
@@ -24,8 +27,32 @@
     <ClCompile Include="fathm_ft.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="_1.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
     <ClCompile Include="two_func.c">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="_2.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_3.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_4.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_5.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_6.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_7.c">
+      <Filter>源文件\practise</Filter>
+    </ClCompile>
+    <ClCompile Include="_8.c">
+      <Filter>源文件\practise</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
