--- a/2/2.vcxproj.filters
+++ b/2/2.vcxproj.filters
@@ -57,5 +57,8 @@
     <ClCompile Include="platinum.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="print1.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
