--- a/3/3.vcxproj.filters
+++ b/3/3.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="toobig.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="print2.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
