--- a/3/3.vcxproj.filters
+++ b/3/3.vcxproj.filters
@@ -30,5 +30,11 @@
     <ClCompile Include="print2.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="charcode.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="altnames.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
