--- a/3/3.vcxproj.filters
+++ b/3/3.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="typesize.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="badcount.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
