--- a/3/3.vcxproj.filters
+++ b/3/3.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="badcount.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="escape.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
