--- a/2/2.vcxproj.filters
+++ b/2/2.vcxproj.filters
@@ -13,7 +13,7 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="源文件\practise">
+    <Filter Include="源文件\exercises">
       <UniqueIdentifier>{4c3f324d-5a67-4b65-9adc-304a60c090a7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -28,31 +28,31 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="_1.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="two_func.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="_2.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_3.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_4.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_5.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_6.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_7.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
     <ClCompile Include="_8.c">
-      <Filter>源文件\practise</Filter>
+      <Filter>源文件\exercises</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
